  command will do.
- ai on
  ai off
  Turns AI on/off.
- card list
  List cards in your inventory.
- card use <card inventory number>
  Get the list of items you can slot the card into.
- card mergelist
  Show the list of items you can slot the card into again.
- card mergecancel
  Cancel the card merging request.
- card merge <merge list number>
  Merge the card into the item.


New config options:
- partySkill: target_dead
  Only use the skill on a dead player. Useful for Resurrection.
- avoidGM_namePattern (regular expression)
  In case your server uses non-standard GM names, you can specify a
  regular expression for GM names with this option.
- teleportAuto_totalDmg (number)
  teleportAuto_totalDmgInLock (number)
  Teleport away if a monster has done this much total damage to you.
- dcOnZeny (number)
  Disconnect automatically when your Zeny equals or lower than the
  specified number. Useful if you use buyAuto or the auto buy plugin.

Internal:
- whenGroundStatus() now takes coordinates instead of a player/monster.

Credits:
- Damokles: case sensitivity fix, avoidGM_namePattern.
- kunjandad: friend list packet support.
- Crypticode: 'ai on'/'ai off' commands; item name support in 'uneq'
  command.


==================
### 1.6.1
==================

*** INCOMPATIBLE CHANGES ***:
- teleportAuto_useSP is now obsolete my teleportAuto_useSkill.
- The _inInventory directive has changed. See below.

Bug fixes:
- Logging framework: writing messages to files should work again.
- Correct write to servers.txt for version search.
- Fix lockMap_randX/Y. lockMap_x/y acting as the top right corner of the
  rectangle. This is now treated as the center of the rectangle.
- Stopped the annoying "Attempted to use skill you do not have."
  messages by moving the message from error to debug.
- Fix autoBreakTime not working on some systems.
- Fix 'store desc <num>' command.
- Don't spam the teleport packet when you're not on one of the maps in