@@ -41,7 +41,6 @@ New commands:
 - card merge <merge list number>
   Merge the card into the item.
 
-
 New config options:
 - partySkill: target_dead
   Only use the skill on a dead player. Useful for Resurrection.
@@ -55,8 +54,16 @@ New config options:
   Disconnect automatically when your Zeny equals or lower than the
   specified number. Useful if you use buyAuto or the auto buy plugin.
 
+New control files:
+- control/sys.txt
+  This file stores options that can only be loaded once (so this file
+  cannot be reloaded). You can get a default version of this file
+  from the default configuration files archive.
+
 Internal:
 - whenGroundStatus() now takes coordinates instead of a player/monster.
+- There's now a %sys (in package Settings) variable for options in
+  control/sys.txt
 
 Credits:
 - Damokles: case sensitivity fix, avoidGM_namePattern.
